--- a/ui/index.html
+++ b/ui/index.html
@@ -42,6 +42,12 @@
                     </a>
                 </div>
 
+                <div id="stop-controls" class="d-none mb-0 mx-3 px-3 border-right">
+                    <a onclick="stopRun()" data-toggle="tooltip" data-placement="bottom" title="Stop" class="cursor-pointer">
+                        <img src="img/square.svg" width="20" height="20" class="mx-1" alt="stop" />
+                    </a>
+                </div>
+
                 <div class="d-inline-block mb-0">
                     <a onclick="showSettingsOvarlay()" data-toggle="tooltip" data-placement="bottom" title="Settings" class="cursor-pointer">
                         <img src="img/settings.svg" width="20" height="20" class="mx-1" alt="settings" />
