--- a/ui/index.html
+++ b/ui/index.html
@@ -297,30 +297,30 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="port-input">Vertex Separation:</label>
-                                    <input type="number" min=0 max=500 class="form-control" placeholder="0" id="port-input" required>
+                                    <label for="vertex-separation-input">Vertex Separation:</label>
+                                    <input type="number" min=0 max=500 class="form-control" placeholder="0" id="vertex-separation-input" required>
                                     <div class="invalid-feedback">
                                         Please input the port used by the websocket server.
                                     </div>
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="port-input">Edge Separation:</label>
-                                    <input type="number" min=0 max=500 class="form-control" placeholder="0" id="port-input" required>
+                                    <label for="edge-separation-input">Edge Separation:</label>
+                                    <input type="number" min=0 max=500 class="form-control" placeholder="0" id="edge-separation-input" required>
                                     <div class="invalid-feedback">
                                         Please input the port used by the websocket server.
                                     </div>
                                 </div>
 
                                 <div class="form-group">
-                                    <label for="port-input">Rank Separation:</label>
-                                    <input type="number" min=0 max=500 class="form-control" placeholder="0" id="port-input" required>
+                                    <label for="rank-separation-input">Rank Separation:</label>
+                                    <input type="number" min=0 max=500 class="form-control" placeholder="0" id="rank-separation-input" required>
                                     <div class="invalid-feedback">
                                         Please input the port used by the websocket server.
                                     </div>
                                 </div>
 
-                                <button type="button" onclick="" class="btn btn-primary mr-2 my-2">Save</button>
+                                <button type="button" onclick="saveSettings()" class="btn btn-primary mr-2 my-2">Save</button>
                                 <button type="button" onclick="hideSettingsOvarlay()" class="btn btn-danger ml-2 my-2">Close</button>
                             </form>
                         </div>
