--- a/ui/index.html
+++ b/ui/index.html
@@ -252,7 +252,7 @@
                             <form>
                                 <div class="form-group">
                                     <label for="port-input">Port:</label>
-                                    <input type="number" min=0 max=65535 class="form-control" placeholder="Websokcet Port" id="port-input" required>
+                                    <input type="number" min=0 max=65535 value=5555 class="form-control" placeholder="Websokcet Port" id="port-input" required>
                                     <div class="invalid-feedback">
                                         Please input the port used by the websocket server.
                                     </div>
