Fix dependency issue

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html lang="en">
     <head>
         <!-- Required meta tags -->
@@ -348,7 +349,7 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dagre-d3/0.6.3/dagre-d3.min.js"></script>
 
         <!-- VueJS -->
-        <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.7.8/dist/vue.min.js"></script>
 
         <!-- lodash -->
         <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
