--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
         <!-- Model-Visualizer CSS -->
-        <link rel="stylesheet" href="https://altom.gitlab.io/altwalker/model-visualizer/build/model-visualizer.css">
+        <link rel="stylesheet" href="https://altwalker.github.io/model-visualizer/build/model-visualizer.css">
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="css/models.css">
@@ -355,7 +355,7 @@
         <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
 
         <!-- Model-Visualizer CSS -->
-        <script src="https://altom.gitlab.io/altwalker/model-visualizer/build/model-visualizer.js"></script>
+        <script src="https://altwalker.github.io/model-visualizer/build/model-visualizer.js"></script>
 
         <!-- Custom Scripts -->
         <script type="text/javascript" src="js/models.js"></script>
