Update webpack config

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
 
-        <title>Live Viewer: A live-viewer for an AltWalker test run.</title>
+        <title>AltWalker's Live Viewer: A real-time viewer for AltWalker test runs.</title>
         <meta name="description" content="">
         <meta name="keywords" content="">
 
@@ -17,10 +17,6 @@
 
         <!-- Model-Visualizer CSS -->
         <link rel="stylesheet" href="https://altwalker.github.io/model-visualizer/build/model-visualizer.css">
-
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="css/models.css">
-        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <nav class="navbar navbar-light bg-white border-bottom">
