--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
                         <span id="autoplay-seconds">5</span> seconds...
                     </span>
 
-                    <a id="stop-button" data-toggle="tooltip" data-placement="bottom" title="Stop" class="cursor-pointer">
+                    <a id="stop-autoplay-button" data-toggle="tooltip" data-placement="bottom" title="Stop" class="cursor-pointer">
                         <img src="img/square.svg" width="20" height="20" class="mx-1" alt="stop" />
                     </a>
                     <a id="skip-button" data-toggle="tooltip" data-placement="bottom" title="Skip" class="cursor-pointer">
@@ -38,7 +38,7 @@
                 </div>
 
                 <div id="stop-controls" class="d-none mb-0 mx-3 px-3 border-right">
-                    <a id="stop-button" data-toggle="tooltip" data-placement="bottom" title="Stop" class="cursor-pointer">
+                    <a id="stop-run-button" data-toggle="tooltip" data-placement="bottom" title="Stop" class="cursor-pointer">
                         <img src="img/square.svg" width="20" height="20" class="mx-1" alt="stop" />
                     </a>
                 </div>
