--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-light bg-white border-bottom">
             <a class="navbar-brand" href="#">
                 <img src="img/logo.svg" width="30" height="30" class="d-inline-block align-top mx-1" alt="logo" />
-                Live Viewer
+                AltWalker's Live Viewer
             </a>
             <div>
                 <div id="autoplay-controls" class="d-none mb-0 mx-3 px-3 border-right">
@@ -255,7 +255,7 @@
 
                                 <div class="form-group form-check">
                                     <input type="checkbox" class="form-check-input" id="autoplay-checkbox">
-                                    <label class="form-check-label" for="autoplay-checkbox">Autoplay</label>
+                                    <label class="form-check-label" for="autoplay-checkbox">Auto-replay</label>
                                 </div>
 
                                 <button type="button" id="connect-button" class="btn btn-primary">
