--- a/src/index.html
+++ b/src/index.html
@@ -247,7 +247,7 @@
                             <form>
                                 <div class="form-group">
                                     <label for="port-input">Port:</label>
-                                    <input type="number" min=0 max=65535 value=5555 class="form-control" placeholder="Websocket Port" id="port-input" required>
+                                    <input type="number" min="0" max="65535" value="5555" class="form-control" placeholder="Websocket Port" id="port-input" required>
                                     <div class="invalid-feedback">
                                         Please input the port used by the websocket server.
                                     </div>
@@ -296,7 +296,7 @@
 
                                 <div class="form-group">
                                     <label for="vertex-separation-input">Vertex Separation:</label>
-                                    <input type="number" min=0 max=500 class="form-control" placeholder="0" id="vertex-separation-input" required>
+                                    <input type="number" min="0" max="500" class="form-control" placeholder="0" id="vertex-separation-input" required>
                                     <div class="invalid-feedback">
                                         Please input the port used by the websocket server.
                                     </div>
@@ -304,7 +304,7 @@
 
                                 <div class="form-group">
                                     <label for="edge-separation-input">Edge Separation:</label>
-                                    <input type="number" min=0 max=500 class="form-control" placeholder="0" id="edge-separation-input" required>
+                                    <input type="number" min="0" max="500" class="form-control" placeholder="0" id="edge-separation-input" required>
                                     <div class="invalid-feedback">
                                         Please input the port used by the websocket server.
                                     </div>
@@ -312,7 +312,7 @@
 
                                 <div class="form-group">
                                     <label for="rank-separation-input">Rank Separation:</label>
-                                    <input type="number" min=0 max=500 class="form-control" placeholder="0" id="rank-separation-input" required>
+                                    <input type="number" min="0" max="500" class="form-control" placeholder="0" id="rank-separation-input" required>
                                     <div class="invalid-feedback">
                                         Please input the port used by the websocket server.
                                     </div>
