--- a/src/index.html
+++ b/src/index.html
@@ -39,14 +39,12 @@
                 AltWalker's Live Viewer
             </a>
             <div>
-                <div id="stop-controls" class="d-none mb-0 mx-3 px-3 border-right">
-                    <a id="stop-run-button" data-toggle="tooltip" data-placement="bottom" title="Stop" class="cursor-pointer">
+                <div class="d-inline-block mb-0">
+                    <a id="stop-run-button" class="d-none border-right pr-3" data-toggle="tooltip" data-placement="bottom" title="Stop" class="cursor-pointer">
                         <img src="img/square.svg" width="20" height="20" class="mx-1" alt="stop" />
                     </a>
-                </div>
 
-                <div class="d-inline-block mb-0">
-                    <a id="settings-button" data-toggle="tooltip" data-placement="bottom" title="Settings" class="cursor-pointer">
+                    <a id="settings-button" class="ml-3" data-toggle="tooltip" data-placement="bottom" title="Settings" class="cursor-pointer">
                         <img src="img/settings.svg" width="20" height="20" class="mx-1" alt="settings" />
                     </a>
                 </div>
@@ -59,7 +57,7 @@
                     <div id="visualizer"></div>
                 </div>
 
-                <div id="dragbar" class="h-full">
+                <div id="drag-bar" class="h-full">
                 </div>
 
                 <div id="right" class="h-full bg-light px-3 py-3 border-left overflow-y-scroll">
@@ -199,8 +197,8 @@
                             </div>
 
                             <div class="form-group form-check">
-                                <input type="checkbox" class="form-check-input" id="autoscroll-checkbox" checked>
-                                <label class="form-check-label" for="autoscroll-checkbox">Autoscroll</label>
+                                <input type="checkbox" class="form-check-input" id="auto-scroll-checkbox" checked>
+                                <label class="form-check-label" for="auto-scroll-checkbox">Autoscroll</label>
                             </div>
                         </form>
 
