Fix lint issues

--- a/src/index.html
+++ b/src/index.html
@@ -40,11 +40,11 @@
             </a>
             <div>
                 <div class="d-inline-block mb-0">
-                    <a id="stop-run-button" class="d-none border-right pr-3" data-toggle="tooltip" data-placement="bottom" title="Stop" class="cursor-pointer">
+                    <a id="stop-run-button" data-toggle="tooltip" data-placement="bottom" title="Stop" class="d-none border-right pr-3 cursor-pointer">
                         <img src="img/square.svg" width="20" height="20" class="mx-1" alt="stop" />
                     </a>
 
-                    <a id="settings-button" class="ml-3" data-toggle="tooltip" data-placement="bottom" title="Settings" class="cursor-pointer">
+                    <a id="settings-button" data-toggle="tooltip" data-placement="bottom" title="Settings" class="cursor-pointer ml-3">
                         <img src="img/settings.svg" width="20" height="20" class="mx-1" alt="settings" />
                     </a>
                 </div>
