Use the model-visualizer version from jsDelivr

--- a/src/index.html
+++ b/src/index.html
@@ -344,6 +344,6 @@
         <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
 
         <!-- Model-Visualizer JS -->
-        <script src="https://cdn.jsdelivr.net/gh/altwalker/model-visualizer@release-v0.0.6/model-visualizer.min.js"></script>        <script src="https://altwalker.github.io/model-visualizer/build/model-visualizer.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/altwalker/model-visualizer@release-v0.0.6/model-visualizer.min.js"></script>
     </body>
 </html>
