Use the model-visualizer version 0.0.6 from jsDelivr (#59)
* Use the model-visualizer version from jsDelivr

* Use the model-visualizer version from jsDelivr

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
         <!-- Model-Visualizer CSS -->
-        <link rel="stylesheet" href="https://altwalker.github.io/model-visualizer/build/model-visualizer.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/altwalker/model-visualizer@release-v0.0.6/model-visualizer.min.css">
     </head>
     <body>
         <nav class="navbar navbar-light bg-white border-bottom">
@@ -343,7 +343,7 @@
         <!-- lodash -->
         <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.15/lodash.min.js"></script>
 
-        <!-- Model-Visualizer CSS -->
-        <script src="https://altwalker.github.io/model-visualizer/build/model-visualizer.js"></script>
+        <!-- Model-Visualizer JS -->
+        <script src="https://cdn.jsdelivr.net/gh/altwalker/model-visualizer@release-v0.0.6/model-visualizer.min.js"></script>
     </body>
 </html>
